crates/parser/tests/snapshots/key_multi_space_separator.snap
---
source: crates/parser/tests/snapshots.rs
---
# key-multi-space-separator

## Input

```
a  value
b   42
c    true

```

## CST

```
SOURCE_FILE@0..26
  ENTRY@0..9
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..3 "  "
    LINE_STRING@3..8
      STRING@3..8 "value"
    NEWLINE@8..9 "\n"
  ENTRY@9..16
    WORD_KEY@9..10
      WORD@9..10 "b"
    SPACE@10..13 "   "
    INTEGER@13..15
      NUMERAL@13..15 "42"
    NEWLINE@15..16 "\n"
  ENTRY@16..26
    WORD_KEY@16..17
      WORD@16..17 "c"
    SPACE@17..21 "    "
    BOOLEAN@21..25
      TRUE@21..25 "true"
    NEWLINE@25..26 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: LineString {
                string: STRING@3..8 "value",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@9..10 "b",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@13..15 "42",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@16..17 "c",
            },
            value: Boolean {
                token: TRUE@21..25 "true",
            },
        },
    ],
}
```

vim:ft=markdown
