crates/parser/tests/snapshots/key_quoted_basic.snap
---
source: crates/parser/tests/snapshots.rs
---
# key-quoted-basic

## Input

```
"double"          value
'single'          value
""                empty

```

## CST

```
SOURCE_FILE@0..72
  ENTRY@0..24
    QUOTED_KEY@0..8
      DOUBLE_QUOTE@0..1 "\""
      STRING@1..7 "double"
      DOUBLE_QUOTE@7..8 "\""
    SPACE@8..18 "          "
    LINE_STRING@18..23
      STRING@18..23 "value"
    NEWLINE@23..24 "\n"
  ENTRY@24..48
    QUOTED_KEY@24..32
      SINGLE_QUOTE@24..25 "'"
      STRING@25..31 "single"
      SINGLE_QUOTE@31..32 "'"
    SPACE@32..42 "          "
    LINE_STRING@42..47
      STRING@42..47 "value"
    NEWLINE@47..48 "\n"
  ENTRY@48..72
    QUOTED_KEY@48..50
      DOUBLE_QUOTE@48..49 "\""
      DOUBLE_QUOTE@49..50 "\""
    SPACE@50..66 "                "
    LINE_STRING@66..71
      STRING@66..71 "empty"
    NEWLINE@71..72 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: QuotedKey {
                open_quote: DOUBLE_QUOTE@0..1 "\"",
                string: STRING@1..7 "double",
                close_quote: DOUBLE_QUOTE@0..1 "\"",
            },
            value: LineString {
                string: STRING@18..23 "value",
            },
        },
        Entry {
            key: QuotedKey {
                open_quote: SINGLE_QUOTE@24..25 "'",
                string: STRING@25..31 "single",
                close_quote: SINGLE_QUOTE@24..25 "'",
            },
            value: LineString {
                string: STRING@42..47 "value",
            },
        },
        Entry {
            key: QuotedKey {
                open_quote: DOUBLE_QUOTE@48..49 "\"",
                string: none,
                close_quote: DOUBLE_QUOTE@48..49 "\"",
            },
            value: LineString {
                string: STRING@66..71 "empty",
            },
        },
    ],
}
```

vim:ft=markdown
