crates/parser/tests/snapshots/key_quoted_spaces_hash.snap
---
source: crates/parser/tests/snapshots.rs
---
# key-quoted-spaces-hash

## Input

```
"key with spaces" v1
'a # b'           v2

```

## CST

```
SOURCE_FILE@0..42
  ENTRY@0..21
    QUOTED_KEY@0..17
      DOUBLE_QUOTE@0..1 "\""
      STRING@1..16 "key with spaces"
      DOUBLE_QUOTE@16..17 "\""
    SPACE@17..18 " "
    LINE_STRING@18..20
      STRING@18..20 "v1"
    NEWLINE@20..21 "\n"
  ENTRY@21..42
    QUOTED_KEY@21..28
      SINGLE_QUOTE@21..22 "'"
      STRING@22..27 "a # b"
      SINGLE_QUOTE@27..28 "'"
    SPACE@28..39 "           "
    LINE_STRING@39..41
      STRING@39..41 "v2"
    NEWLINE@41..42 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: QuotedKey {
                open_quote: DOUBLE_QUOTE@0..1 "\"",
                string: STRING@1..16 "key with spaces",
                close_quote: DOUBLE_QUOTE@16..17 "\"",
            },
            value: LineString {
                string: STRING@18..20 "v1",
            },
        },
        Entry {
            key: QuotedKey {
                open_quote: SINGLE_QUOTE@21..22 "'",
                string: STRING@22..27 "a # b",
                close_quote: SINGLE_QUOTE@27..28 "'",
            },
            value: LineString {
                string: STRING@39..41 "v2",
            },
        },
    ],
}
```

vim:ft=markdown
